# praxis

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  lock-merged-branch.yml
docs/: architecture.md
docs/design/praxis-viewer-workflow-fixes/: Praxis Viewer.dc.html  README.md
examples/claude_skill/: SKILL.md
examples/concise_scientific_writing/: input.md
examples/drift_study/: input.md
examples/hotaling_2020/: input.md
examples/pm_writing/: input.md
examples/repo_docs/: input.md
examples/resume/: input.md
packs/claude_skill_authoring/: pack.yaml
packs/concise_scientific_writing/: pack.yaml
packs/pm_writing/: pack.yaml
packs/repo_docs/: pack.yaml
packs/resume_writing/: pack.yaml
praxis/: cli.py  handoff.py  metrics.py  models.py  packs.py  pipeline.py  report.py  rules.py  validation.py
scripts/: build_site.sh
spec/: RFC-0001-praxis.md  RFC-0002-praxis-ui.md
tests/: test_harness.py
web/: README.md  index.html  styles.css  sw.js
web/src/: engine.js  main.js  markdown.js  worker.js
