[project]
name = "praxis"
version = "0.1.0"
description = "Executable harness for transparent, auditable document transformation pipelines"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
